Snake zamieniony z LinkedList na ArrayList