@@ -1,6 +1,6 @@
-import java.awt.event.*;
 import javax.swing.*;
 import java.awt.*;
+import java.awt.event.*;
 import java.awt.geom.Ellipse2D;
 import java.awt.geom.Point2D;
 import java.util.concurrent.ThreadLocalRandom;
@@ -24,13 +24,12 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
         timer.start();
     }
 
-
     @Override
     public void mouseDragged(MouseEvent e) {
-        if(mouseInWindow) {
+        if (mouseInWindow) {
             mousePosition.setLocation(e.getX(), e.getY());
         }
-        if(!speedUp) {
+        if (!speedUp) {
             gameSpeed *= 2;
             speedUp = true;
         }
@@ -39,7 +38,7 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
 
     @Override
     public void mouseMoved(MouseEvent e) {
-        if(mouseInWindow) {
+        if (mouseInWindow) {
             mousePosition.setLocation(e.getX(), e.getY());
         }
         //System.out.println("mouseMoved");
@@ -64,7 +63,7 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
 
     @Override
     public void mousePressed(MouseEvent e) {
-        if(!speedUp) {
+        if (!speedUp) {
             gameSpeed *= 2;
             speedUp = true;
         }
@@ -73,7 +72,7 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
 
     @Override
     public void mouseReleased(MouseEvent e) {
-        if(speedUp) {
+        if (speedUp) {
             gameSpeed /= 2;
             speedUp = false;
         }
@@ -87,26 +86,28 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
         g2d.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
         g2d.setColor(Color.GREEN);
         Ellipse2D.Double snakeSegmentImg;
-        for(int i = 0; i < GameBoard.snake.bodySegments.size(); i++) {
-            snakeSegmentImg = new Ellipse2D.Double(GameBoard.snake.bodySegments.get(i).getX() - gameSegmentSize/2, GameBoard.snake.bodySegments.get(i).getY() - gameSegmentSize/2, gameSegmentSize, gameSegmentSize);
+        for (int i = 0; i < GameBoard.snake.bodySegments.size(); i++) {
+            snakeSegmentImg = new Ellipse2D.Double(GameBoard.snake.bodySegments.get(i).getX() - gameSegmentSize / 2,
+                    GameBoard.snake.bodySegments.get(i).getY() - gameSegmentSize / 2, gameSegmentSize, gameSegmentSize);
             g2d.fill(snakeSegmentImg);
         }
-        Ellipse2D.Double foodImg = new Ellipse2D.Double(gameBoard.food.getX() - gameSegmentSize/2, gameBoard.food.getY() - gameSegmentSize/2, gameSegmentSize, gameSegmentSize);
+        Ellipse2D.Double foodImg = new Ellipse2D.Double(gameBoard.food.getX() - gameSegmentSize / 2,
+                gameBoard.food.getY() - gameSegmentSize / 2, gameSegmentSize, gameSegmentSize);
         g2d.setColor(Color.RED);
         g2d.fill(foodImg);
     }
 
     @Override
     public void actionPerformed(ActionEvent e) {
-        if(mouseInWindow) {
-            double mouseVectorX = mousePosition.getX() - GameBoard.snake.bodySegments.getFirst().getX();
-            double mouseVectorY = mousePosition.getY() - GameBoard.snake.bodySegments.getFirst().getY();
-            double mouseVectorLength = Math.sqrt(mouseVectorX*mouseVectorX + mouseVectorY*mouseVectorY);
-            double dirX = mouseVectorX/mouseVectorLength;
-            double dirY = mouseVectorY/mouseVectorLength;
+        if (mouseInWindow) {
+            double mouseVectorX = mousePosition.getX() - GameBoard.snake.bodySegments.get(0).getX();
+            double mouseVectorY = mousePosition.getY() - GameBoard.snake.bodySegments.get(0).getY();
+            double mouseVectorLength = Math.sqrt(mouseVectorX * mouseVectorX + mouseVectorY * mouseVectorY);
+            double dirX = mouseVectorX / mouseVectorLength;
+            double dirY = mouseVectorY / mouseVectorLength;
             if (GameBoard.snake.bodySegments.size() > 2) {
-                double bodyVectorX = GameBoard.snake.bodySegments.get(2).getX() - GameBoard.snake.bodySegments.getFirst().getX();
-                double bodyVectorY = GameBoard.snake.bodySegments.get(2).getY() - GameBoard.snake.bodySegments.getFirst().getY();
+                double bodyVectorX = GameBoard.snake.bodySegments.get(2).getX() - GameBoard.snake.bodySegments.get(0).getX();
+                double bodyVectorY = GameBoard.snake.bodySegments.get(2).getY() - GameBoard.snake.bodySegments.get(0).getY();
                 double bodyVectorLength = Math.sqrt(bodyVectorX * bodyVectorX + bodyVectorY * bodyVectorY);
                 double scalarProd = mouseVectorX * bodyVectorX + mouseVectorY * bodyVectorY;
                 double cosVectors = scalarProd / (mouseVectorLength * bodyVectorLength);
@@ -121,19 +122,19 @@ public class GamePanel extends JPanel implements MouseListener, MouseMotionListe
                     dirY = -bodyVectorY / bodyVectorLength;
                 }
             }
-            GameBoard.snake.bodySegments.getFirst().setLocation(GameBoard.snake.bodySegments.getFirst().getX() + dirX*gameSpeed, GameBoard.snake.bodySegments.getFirst().getY() + dirY*gameSpeed);
+            GameBoard.snake.bodySegments.get(0).setLocation(GameBoard.snake.bodySegments.get(0).getX() + dirX * gameSpeed, GameBoard.snake.bodySegments.get(0).getY() + dirY * gameSpeed);
 
             gameBoard.checkBorderCollision(gameSegmentSize);
             gameBoard.checkTailCollision(gameSegmentSize);
-            if(gameBoard.checkFood(gameSegmentSize)) {
-                System.out.printf("Food at (%f, %f) location collected by head at (%f, %f) location\n", gameBoard.food.getX(), gameBoard.food.getY(), GameBoard.snake.bodySegments.getFirst().getX(), GameBoard.snake.bodySegments.getFirst().getY());
+            if (gameBoard.checkFood(gameSegmentSize)) {
                 gameBoard.respawnFood(gameSegmentSize);
                 GameBoard.snake.addBodySegment();
 
                 //do sprawdzania pozycji części snejka
                 System.out.printf("SIZE: (%d)\n", GameBoard.snake.bodySegments.size());
                 for (int i = GameBoard.snake.bodySegments.size() - 1; i > 1; i--) {
-                    System.out.printf("Segment %d at (%f, %f) location\n", i, GameBoard.snake.bodySegments.get(i).getX(), GameBoard.snake.bodySegments.get(i).getY());
+                    System.out.printf("Segment %d at (%f, %f) location\n", i, GameBoard.snake.bodySegments.get(i).getX(),
+                            GameBoard.snake.bodySegments.get(i).getY());
                 }
             }
             GameBoard.snake.move();
